@startuml
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "users" as users {
  *id : BIGINT <<PK>>
  --
  username : VARCHAR <<UQ>>
  email : VARCHAR <<UQ>>
  password_hash : VARCHAR
  first_name : VARCHAR
  last_name : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "projects" as projects {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
  description : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tasks" as tasks {
  *id : BIGINT <<PK>>
  --
  title : VARCHAR
  description : TEXT
  status : VARCHAR
  priority : VARCHAR
  project_id : BIGINT <<FK>>
  creator_id : BIGINT <<FK>>
  assignee_id : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  due_date : TIMESTAMP
}

entity "comments" as comments {
  *id : BIGINT <<PK>>
  --
  text : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  task_id : BIGINT <<FK>>
  author_id : BIGINT <<FK>>
}

entity "tags" as tags {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
}

entity "project_members" as project_members {
  *project_id : BIGINT <<PK,FK>>
  *user_id : BIGINT <<PK,FK>>
  --
  role : VARCHAR
  joined_at : TIMESTAMP
}

entity "task_tags" as task_tags {
  *task_id : BIGINT <<PK,FK>>
  *tag_id : BIGINT <<PK,FK>>
}

' 1 : N (nullable FK в tasks для project/creator/assignee)
projects |o--o{ tasks : project_id
users    |o--o{ tasks : creator_id
users    |o--o{ tasks : assignee_id

' 1 : N (обязательные FK)
tasks ||--o{ comments : task_id
users ||--o{ comments : author_id

' M : N через таблицы связей
projects ||--o{ project_members : project_id
users    ||--o{ project_members : user_id

tasks ||--o{ task_tags : task_id
tags  ||--o{ task_tags : tag_id
@enduml